# driftcheck

./: LICENSE  Makefile  README.md  pyproject.toml
driftcheck/: __init__.py  monitor.py
driftcheck/statistics/: __init__.py  ks.py  psi.py
scripts/: preflight.py
tests/: test_monitor.py
